--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       ARCH: x86_64
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Build AppImage
         run: bash -ex ci/build-appimage.sh
       - name: Archive artifacts
@@ -31,6 +33,8 @@ jobs:
       ARCH: i386
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Install dependencies
         run: apt-get install -y g++-multilib libc6-dev:i386 libstdc++-5-dev:i386 zlib1g:i386 libfuse2:i386
       - name: Build AppImage
