--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
         with:
           submodules: recursive
       - name: Install dependencies
-        run: apt-get install -y g++-multilib libc6-dev:i386 libstdc++-5-dev:i386 zlib1g:i386 libfuse2:i386
+        run: |
+            sudo dpkg --add-architecture i386
+            sudo apt-get update
+            sudo apt-get install -y g++-multilib libc6-dev:i386 libstdc++-5-dev:i386 zlib1g:i386 libfuse2:i386
       - name: Build AppImage
         run: bash -ex ci/build-appimage.sh
       - name: Archive artifacts
